engine/core/imgui/imgui.h

struct ImGuiPlatformIO;             
struct ImGuiViewport;               
typedef int ImGuiMouseButton;       
typedef int ImGuiMouseCursor;       
typedef int ImGuiInputTextFlags;    
typedef unsigned int ImGuiID;       
struct ImVec2
{
    float                                   x, y;
    ImVec2()                                { x = y = 0.0f; }
    ImVec2(float _x, float _y)              { x = _x; y = _y; }
    float  operator[] (size_t idx) const    { IM_ASSERT(idx <= 1); return (&x)[idx]; }    
    float& operator[] (size_t idx)          { IM_ASSERT(idx <= 1); return (&x)[idx]; }    
#ifdef IM_VEC2_CLASS_EXTRA
    IM_VEC2_CLASS_EXTRA     
#endif
};
    IMGUI_API bool          Combo(const char* label, int* current_item, bool(*items_getter)(void* data, int idx, const char** out_text), void* data, int items_count, int popup_max_height_in_items = -1);
    IMGUI_API bool          InputFloat(const char* label, float* v, float step = 0.0f, float step_fast = 0.0f, const char* format = "%.3f", ImGuiInputTextFlags flags = 0);
    IMGUI_API bool          InputFloat2(const char* label, float v[2], const char* format = "%.3f", ImGuiInputTextFlags flags = 0);
    IMGUI_API bool          InputFloat3(const char* label, float v[3], const char* format = "%.3f", ImGuiInputTextFlags flags = 0);
    IMGUI_API bool          InputFloat4(const char* label, float v[4], const char* format = "%.3f", ImGuiInputTextFlags flags = 0);
    IMGUI_API bool          ListBox(const char* label, int* current_item, bool (*items_getter)(void* data, int idx, const char** out_text), void* data, int items_count, int height_in_items = -1);
    IMGUI_API void          PlotLines(const char* label, float(*values_getter)(void* data, int idx), void* data, int values_count, int values_offset = 0, const char* overlay_text = NULL, float scale_min = FLT_MAX, float scale_max = FLT_MAX, ImVec2 graph_size = ImVec2(0, 0));
    IMGUI_API void          PlotHistogram(const char* label, float(*values_getter)(void* data, int idx), void* data, int values_count, int values_offset = 0, const char* overlay_text = NULL, float scale_min = FLT_MAX, float scale_max = FLT_MAX, ImVec2 graph_size = ImVec2(0, 0));
    IMGUI_API bool          IsMouseClicked(ImGuiMouseButton button, bool repeat = false);       
    IMGUI_API bool          IsMouseReleased(ImGuiMouseButton button);                           
    IMGUI_API bool          IsMouseDoubleClicked(ImGuiMouseButton button);                      
    IMGUI_API bool          IsMouseHoveringRect(const ImVec2& r_min, const ImVec2& r_max, bool clip = true);
    IMGUI_API bool          IsMousePosValid(const ImVec2* mouse_pos = NULL);                    
    IMGUI_API bool          IsAnyMouseDown();                                                   
    IMGUI_API ImVec2        GetMousePos();                                                      
    IMGUI_API ImVec2        GetMousePosOnOpeningCurrentPopup();                                 
    IMGUI_API bool          IsMouseDragging(ImGuiMouseButton button, float lock_threshold = -1.0f);         
    IMGUI_API ImVec2        GetMouseDragDelta(ImGuiMouseButton button = 0, float lock_threshold = -1.0f);   
    IMGUI_API void          ResetMouseDragDelta(ImGuiMouseButton button = 0);                   
    IMGUI_API ImGuiMouseCursor GetMouseCursor();                                                
    IMGUI_API void          SetMouseCursor(ImGuiMouseCursor cursor_type);                       
    IMGUI_API void          CaptureMouseFromApp(bool want_capture_mouse_value = true);          
    IMGUI_API const char*   GetClipboardText();
    IMGUI_API void          SetClipboardText(const char* text);
    IMGUI_API void          LoadIniSettingsFromDisk(const char* ini_filename);                  
    IMGUI_API void          LoadIniSettingsFromMemory(const char* ini_data, size_t ini_size=0); 
    IMGUI_API void          SaveIniSettingsToDisk(const char* ini_filename);                    
    IMGUI_API const char*   SaveIniSettingsToMemory(size_t* out_ini_size = NULL);               
    IMGUI_API bool          DebugCheckVersionAndDataLayout(const char* version_str, size_t sz_io, size_t sz_style, size_t sz_vec2, size_t sz_vec4, size_t sz_drawvert, size_t sz_drawidx); 
    IMGUI_API void          SetAllocatorFunctions(void* (*alloc_func)(size_t sz, void* user_data), void (*free_func)(void* ptr, void* user_data), void* user_data = NULL);
    IMGUI_API void*         MemAlloc(size_t size);
    IMGUI_API void          MemFree(void* ptr);
    IMGUI_API ImGuiPlatformIO&  GetPlatformIO();                                                
    IMGUI_API ImGuiViewport*    GetMainViewport();                                              
    IMGUI_API void              UpdatePlatformWindows();                                        
    IMGUI_API void              RenderPlatformWindowsDefault(void* platform_render_arg = NULL, void* renderer_render_arg = NULL); 
    IMGUI_API void              DestroyPlatformWindows();                                       
    IMGUI_API ImGuiViewport*    FindViewportByID(ImGuiID id);                                   
    IMGUI_API ImGuiViewport*    FindViewportByPlatformHandle(void* platform_handle);            
    IMGUI_API bool      InputFloat(const char* label, float* v, float step, float step_fast, int decimal_precision, ImGuiInputTextFlags flags = 0); 
    IMGUI_API bool      InputFloat2(const char* label, float v[2], int decimal_precision, ImGuiInputTextFlags flags = 0);
    IMGUI_API bool      InputFloat3(const char* label, float v[3], int decimal_precision, ImGuiInputTextFlags flags = 0);
    IMGUI_API bool      InputFloat4(const char* label, float v[4], int decimal_precision, ImGuiInputTextFlags flags = 0);
struct ImGuiPlatformIO
{
    void    (*Platform_CreateWindow)(ImGuiViewport* vp);                    
    void    (*Platform_DestroyWindow)(ImGuiViewport* vp);                   
    void    (*Platform_ShowWindow)(ImGuiViewport* vp);                      
    void    (*Platform_SetWindowPos)(ImGuiViewport* vp, ImVec2 pos);        
    ImVec2  (*Platform_GetWindowPos)(ImGuiViewport* vp);                    
    void    (*Platform_SetWindowSize)(ImGuiViewport* vp, ImVec2 size);      
    ImVec2  (*Platform_GetWindowSize)(ImGuiViewport* vp);                   
    void    (*Platform_SetWindowFocus)(ImGuiViewport* vp);                  
    bool    (*Platform_GetWindowFocus)(ImGuiViewport* vp);                  
    bool    (*Platform_GetWindowMinimized)(ImGuiViewport* vp);              
    void    (*Platform_SetWindowTitle)(ImGuiViewport* vp, const char* str); 
    void    (*Platform_SetWindowAlpha)(ImGuiViewport* vp, float alpha);     
    void    (*Platform_UpdateWindow)(ImGuiViewport* vp);                    
    void    (*Platform_RenderWindow)(ImGuiViewport* vp, void* render_arg);  
    void    (*Platform_SwapBuffers)(ImGuiViewport* vp, void* render_arg);   
    float   (*Platform_GetWindowDpiScale)(ImGuiViewport* vp);               
    void    (*Platform_OnChangedViewport)(ImGuiViewport* vp);               
    void    (*Platform_SetImeInputPos)(ImGuiViewport* vp, ImVec2 pos);      
    int     (*Platform_CreateVkSurface)(ImGuiViewport* vp, ImU64 vk_inst, const void* vk_allocators, ImU64* out_vk_surface); 
    void    (*Renderer_CreateWindow)(ImGuiViewport* vp);                    
    void    (*Renderer_DestroyWindow)(ImGuiViewport* vp);                   
    void    (*Renderer_SetWindowSize)(ImGuiViewport* vp, ImVec2 size);      
    void    (*Renderer_RenderWindow)(ImGuiViewport* vp, void* render_arg);  
    void    (*Renderer_SwapBuffers)(ImGuiViewport* vp, void* render_arg);   
    ImVector<ImGuiPlatformMonitor>  Monitors;
    ImGuiViewport*                  MainViewport;                           
    ImVector<ImGuiViewport*>        Viewports;                              
    ImGuiPlatformIO()               { memset(this, 0, sizeof(*this)); }     
};
struct ImGuiViewport
{
    ImGuiID             ID;                     
    ImGuiViewportFlags  Flags;                  
    ImVec2              Pos;                    
    ImVec2              Size;                   
    ImVec2              WorkOffsetMin;          
    ImVec2              WorkOffsetMax;          
    float               DpiScale;               
    ImDrawData*         DrawData;               
    ImGuiID             ParentViewportId;       
    void*               RendererUserData;       
    void*               PlatformUserData;       
    void*               PlatformHandle;         
    void*               PlatformHandleRaw;      
    bool                PlatformRequestMove;    
    bool                PlatformRequestResize;  
    bool                PlatformRequestClose;   
    ImGuiViewport()     { ID = 0; Flags = 0; DpiScale = 0.0f; DrawData = NULL; ParentViewportId = 0; RendererUserData = PlatformUserData = PlatformHandle = PlatformHandleRaw = NULL; PlatformRequestMove = PlatformRequestResize = PlatformRequestClose = false; }
    ~ImGuiViewport()    { IM_ASSERT(PlatformUserData == NULL && RendererUserData == NULL); }
    ImVec2              GetCenter()             { return ImVec2(Pos.x + Size.x * 0.5f, Pos.y + Size.y * 0.5f); }
    ImVec2              GetWorkPos()            { return ImVec2(Pos.x + WorkOffsetMin.x, Pos.y + WorkOffsetMin.y); }
    ImVec2              GetWorkSize()           { return ImVec2(Size.x - WorkOffsetMin.x + WorkOffsetMax.x, Size.y - WorkOffsetMin.y + WorkOffsetMax.y); } 
};