engine/mono/Imgui/imgui.cs


        // ../../imgui/imgui.h:771
        [DllImport(Engine.Paths.Exe, EntryPoint = "?IsMouseClicked@ImGui@@YA_NH_N@Z")]
        public static extern bool IsMouseClicked(
            int button,
            bool repeat = default
        );

        // ../../imgui/imgui.h:772
        [DllImport(Engine.Paths.Exe, EntryPoint = "?IsMouseReleased@ImGui@@YA_NH@Z")]
        public static extern bool IsMouseReleased(
            int button
        );

        // ../../imgui/imgui.h:773
        [DllImport(Engine.Paths.Exe, EntryPoint = "?IsMouseDoubleClicked@ImGui@@YA_NH@Z")]
        public static extern bool IsMouseDoubleClicked(
            int button
        );

        // ../../imgui/imgui.h:774
        [DllImport(Engine.Paths.Exe, EntryPoint = "?IsMouseHoveringRect@ImGui@@YA_NAEBUImVec2@@0_N@Z")]
        public static extern bool IsMouseHoveringRect(
            in Vector2 r_min,
            in Vector2 r_max,
            bool clip
        );
        // overload
        public static bool IsMouseHoveringRect(
            in Vector2 r_min,
            in Vector2 r_max
        )
        {
            return IsMouseHoveringRect(r_min, r_max, true);
        }

        // ../../imgui/imgui.h:775
        [DllImport(Engine.Paths.Exe, EntryPoint = "?IsMousePosValid@ImGui@@YA_NPEBUImVec2@@@Z")]
        public static extern bool IsMousePosValid(
            in Vector2 mouse_pos = default
        );

        // ../../imgui/imgui.h:776
        [DllImport(Engine.Paths.Exe, EntryPoint = "?IsAnyMouseDown@ImGui@@YA_NXZ")]
        public static extern bool IsAnyMouseDown(
        );

        // ../../imgui/imgui.h:777
        [DllImport(Engine.Paths.Exe, EntryPoint = "?GetMousePos@ImGui@@YA?AUImVec2@@XZ")]
        public static extern Vector2 GetMousePos(
        );

        // ../../imgui/imgui.h:778
        [DllImport(Engine.Paths.Exe, EntryPoint = "?GetMousePosOnOpeningCurrentPopup@ImGui@@YA?AUImVec2@@XZ")]
        public static extern Vector2 GetMousePosOnOpeningCurrentPopup(
        );

        // ../../imgui/imgui.h:779
        [DllImport(Engine.Paths.Exe, EntryPoint = "?IsMouseDragging@ImGui@@YA_NHM@Z")]
        public static extern bool IsMouseDragging(
            int button,
            float lock_threshold = -1.0f
        );

        // ../../imgui/imgui.h:780
        [DllImport(Engine.Paths.Exe, EntryPoint = "?GetMouseDragDelta@ImGui@@YA?AUImVec2@@HM@Z")]
        public static extern Vector2 GetMouseDragDelta(
            int button = default,
            float lock_threshold = -1.0f
        );

        // ../../imgui/imgui.h:781
        [DllImport(Engine.Paths.Exe, EntryPoint = "?ResetMouseDragDelta@ImGui@@YAXH@Z")]
        public static extern void ResetMouseDragDelta(
            int button = default
        );

        // ../../imgui/imgui.h:782
        [DllImport(Engine.Paths.Exe, EntryPoint = "?GetMouseCursor@ImGui@@YAHXZ")]
        public static extern int GetMouseCursor(
        );

        // ../../imgui/imgui.h:783
        [DllImport(Engine.Paths.Exe, EntryPoint = "?SetMouseCursor@ImGui@@YAXH@Z")]
        public static extern void SetMouseCursor(
            int cursor_type
        );

        // ../../imgui/imgui.h:784
        [DllImport(Engine.Paths.Exe, EntryPoint = "?CaptureMouseFromApp@ImGui@@YAX_N@Z")]
        public static extern void CaptureMouseFromApp(
            bool want_capture_mouse_value
        );
        // overload
        public static void CaptureMouseFromApp(
        )
        {
            CaptureMouseFromApp(true);
        }

        // ../../imgui/imgui.h:788
        [DllImport(Engine.Paths.Exe, EntryPoint = "?GetClipboardText@ImGui@@YAPEBDXZ")]
        public static extern IntPtr GetClipboardText(
        );

        // ../../imgui/imgui.h:789
        [DllImport(Engine.Paths.Exe, EntryPoint = "?SetClipboardText@ImGui@@YAXPEBD@Z")]
        public static extern void SetClipboardText(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string text
        );

        // ../../imgui/imgui.h:794
        [DllImport(Engine.Paths.Exe, EntryPoint = "?LoadIniSettingsFromDisk@ImGui@@YAXPEBD@Z")]
        public static extern void LoadIniSettingsFromDisk(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string ini_filename
        );

        // ../../imgui/imgui.h:795
        [DllImport(Engine.Paths.Exe, EntryPoint = "?LoadIniSettingsFromMemory@ImGui@@YAXPEBD_K@Z")]
        public static extern void LoadIniSettingsFromMemory(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string ini_data,
            ulong ini_size = default
        );

        // ../../imgui/imgui.h:796
        [DllImport(Engine.Paths.Exe, EntryPoint = "?SaveIniSettingsToDisk@ImGui@@YAXPEBD@Z")]
        public static extern void SaveIniSettingsToDisk(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string ini_filename
        );

        // ../../imgui/imgui.h:797
        [DllImport(Engine.Paths.Exe, EntryPoint = "?SaveIniSettingsToMemory@ImGui@@YAPEBDPEA_K@Z")]
        public static extern IntPtr SaveIniSettingsToMemory(
            IntPtr out_ini_size = default
        );

        // ../../imgui/imgui.h:800
        [DllImport(Engine.Paths.Exe, EntryPoint = "?DebugCheckVersionAndDataLayout@ImGui@@YA_NPEBD_K11111@Z")]
        public static extern bool DebugCheckVersionAndDataLayout(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string version_str,
            ulong sz_io,
            ulong sz_style,
            ulong sz_vec2,
            ulong sz_vec4,
            ulong sz_drawvert,
            ulong sz_drawidx
        );

        // ../../imgui/imgui.h:805
        [DllImport(Engine.Paths.Exe, EntryPoint = "?SetAllocatorFunctions@ImGui@@YAXP6APEAX_KPEAX@ZP6AX11@Z1@Z")]
        public static extern void SetAllocatorFunctions(
            IntPtr alloc_func,
            IntPtr free_func,
            IntPtr user_data = default
        );

        // ../../imgui/imgui.h:806
        [DllImport(Engine.Paths.Exe, EntryPoint = "?MemAlloc@ImGui@@YAPEAX_K@Z")]
        public static extern IntPtr MemAlloc(
            ulong size
        );

        // ../../imgui/imgui.h:807
        [DllImport(Engine.Paths.Exe, EntryPoint = "?MemFree@ImGui@@YAXPEAX@Z")]
        public static extern void MemFree(
            IntPtr ptr
        );

        // ../../imgui/imgui.h:812
        [DllImport(Engine.Paths.Exe, EntryPoint = "?GetPlatformIO@ImGui@@YAAEAUImGuiPlatformIO@@XZ")]
        public static extern IntPtr GetPlatformIO(
        );

        // ../../imgui/imgui.h:813
        [DllImport(Engine.Paths.Exe, EntryPoint = "?GetMainViewport@ImGui@@YAPEAUImGuiViewport@@XZ")]
        public static extern IntPtr GetMainViewport(
        );

        // ../../imgui/imgui.h:814
        [DllImport(Engine.Paths.Exe, EntryPoint = "?UpdatePlatformWindows@ImGui@@YAXXZ")]
        public static extern void UpdatePlatformWindows(
        );

        // ../../imgui/imgui.h:815
        [DllImport(Engine.Paths.Exe, EntryPoint = "?RenderPlatformWindowsDefault@ImGui@@YAXPEAX0@Z")]
        public static extern void RenderPlatformWindowsDefault(
            IntPtr platform_render_arg = default,
            IntPtr renderer_render_arg = default
        );

        // ../../imgui/imgui.h:816
        [DllImport(Engine.Paths.Exe, EntryPoint = "?DestroyPlatformWindows@ImGui@@YAXXZ")]
        public static extern void DestroyPlatformWindows(
        );

        // ../../imgui/imgui.h:817
        [DllImport(Engine.Paths.Exe, EntryPoint = "?FindViewportByID@ImGui@@YAPEAUImGuiViewport@@I@Z")]
        public static extern IntPtr FindViewportByID(
            uint id
        );

        // ../../imgui/imgui.h:818
        [DllImport(Engine.Paths.Exe, EntryPoint = "?FindViewportByPlatformHandle@ImGui@@YAPEAUImGuiViewport@@PEAX@Z")]
        public static extern IntPtr FindViewportByPlatformHandle(
            IntPtr platform_handle
        );

        // ../../imgui/imgui.h:1792
        [DllImport(Engine.Paths.Exe, EntryPoint = "?InputFloat@ImGui@@YA_NPEBDPEAMMMHH@Z")]
        public static extern bool InputFloat(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref float v,
            float step,
            float step_fast,
            int decimal_precision,
            int flags = default
        );

        // ../../imgui/imgui.h:1793
        [DllImport(Engine.Paths.Exe, EntryPoint = "?InputFloat2@ImGui@@YA_NPEBDQEAMHH@Z")]
        public static extern bool InputFloat2(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref float v,
            int decimal_precision,
            int flags = default
        );

        // ../../imgui/imgui.h:1794
        [DllImport(Engine.Paths.Exe, EntryPoint = "?InputFloat3@ImGui@@YA_NPEBDQEAMHH@Z")]
        public static extern bool InputFloat3(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref float v,
            int decimal_precision,
            int flags = default
        );

        // ../../imgui/imgui.h:1795
        [DllImport(Engine.Paths.Exe, EntryPoint = "?InputFloat4@ImGui@@YA_NPEBDQEAMHH@Z")]
        public static extern bool InputFloat4(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref float v,
            int decimal_precision,
            int flags = default
        );

    }
}
